# anymon

./: .gitignore  APACHE-LICENSE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MIT-LICENSE.md  README.md
.github/: FUNDING.yml  dependabot.yml
.github/scripts/: update-npm-versions.js
.github/workflows/: ci.yml  installers.yml  release.yml
crates/anymon-config/: Cargo.toml
crates/anymon-config/src/: lib.rs
crates/anymon-core/: Cargo.toml  README.md
crates/anymon-core/src/: main.rs
crates/anymon-runner/: Cargo.toml
crates/anymon-runner/src/: lib.rs
crates/anymon-shell/: Cargo.toml
crates/anymon-shell/src/: lib.rs
docs/: api.md  development.md  installation.md  overview.md  updating.md  usage.md
example_project/: Anymon.toml  Cargo.toml
example_project/src/: main.rs
installers/: install.ps1  install.sh
npm/aarch64-apple-darwin/: package.json
npm/aarch64-pc-windows-msvc/: package.json
npm/aarch64-unknown-linux-gnu/: package.json
npm/anymon/: README.md  package.json
npm/x86_64-apple-darwin/: package.json
npm/x86_64-pc-windows-msvc/: package.json
npm/x86_64-unknown-linux-gnu/: package.json
www/: README.md  index.html  install.ps1  install.sh  package.json  pnpm-lock.yaml  vercel.json
www/api/: index.js
www/src/: server.js
