[package]
name = "anymon-core"
authors = ["Anymon Contributors"]
description = "Ultra-fast, language-agnostic file watcher that runs anything on change."
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "anymon"
path = "src/main.rs"

[dependencies]
notify = "8.2"
globset = "0.4"
ignore = "0.4"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
colored = "3"
anymon-config = { path = "../anymon-config" }
anymon-runner = { path = "../anymon-runner" }
anymon-shell = { path = "../anymon-shell" }
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
zip = "7"
serde_json = "1"
