[package]
name = "anymon-runner"
authors = ["Anymon Contributors"]
description = "Runtime and task runner for anymon"
version = "0.7.1"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1", features = ["full"] }
notify = "8.2"
globset = "0.4"
anyhow = "1"
colored = "3"
anymon-config = { path = "../anymon-config" }
