[package]
name = "anymon-shell"
authors = ["Anymon Contributors"]
description = "Lightweight crate to run commands directly without relying on external shells."
version = "0.6.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]

[[bin]]
name = "anymon-shell"
path = "src/bin/anymon_shell.rs"
